Use Datastax Cassandra java driver v4
Upgrade to latest java-driver-core version 4.11.0 in order to make use
of the latest improvements in the Cassandra java driver.

The version 4 of the Cassandra java driver is not backwards compatible
with the version 3 although most of the concepts still overlap.

Most of the changes revolve to a very customizable way of building the CqlSession
(which is the replacement for Cluster & Session from the version 3 of the driver).
This is why there are a great deal of changes in the CassandraClientModule class.
Drop the support  for WhiteListPolicy because this load balancing policy
is not anymore present in v4 of the Cassandra driver.

HostAddressFactory deals currently only with nodes with endpoints which
resolve to  InetSocketAddress.

Keep working with internal String names for tables and schema instead of
the newly introduced CqlIdentifier in order to keep the compatibility
to trino-spi layer.

When specifying explicit contact points for Cassandra, it is mandatory
to specify also the local data center by setting correspondingly
the properties:

- cassandra.load-policy.use-dc-aware
- cassandra.load-policy.dc-aware.local-dc